--- a/package.json
+++ b/package.json
@@ -6,13 +6,27 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.21.4",
+    "babel": "^6.5.2",
+    "brew": "^0.0.8",
+    "css-loader": "5",
+    "echarts": "^5.5.1",
+    "echarts-for-react": "^3.0.2",
+    "mobx": "^6.13.4",
+    "mobx-react-lite": "^4.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "sass": "^1.80.1",
+    "sass-loader": "10",
+    "style-loader": "^1",
+    "typescript": "^5.6.3",
+    "web-vitals": "^2.1.4",
+    "webpack": "^4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "HTTPS=true react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -34,5 +48,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "main": "index.js",
+  "devDependencies": {
+    "babel-loader": "^9.2.1",
+    "html-webpack-plugin": "^5.6.0"
   }
 }
