--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "css-loader": "5",
     "echarts": "^5.5.1",
     "echarts-for-react": "^3.0.2",
+    "lodash": "^4.17.21",
     "mobx": "^6.13.4",
     "mobx-react-lite": "^4.0.7",
     "react": "^18.3.1",
